# curriculum_architect

./: .env.example  .gitignore  IDEA.md  README.md
FOUNDATION/: Problem.md  architecture.md  context_primer.md  guardrails.md  implementation_coder1.md  implementation_coder2.md  implementation_plan.md  implementation_validator.md  merge_procedure.md  mistakes.md  pitch_narrative.md  project_structure.md  safe_states.md  submission_checklist.md
examiner_env/: README.md  __init__.py  client.py  knowledge_base.py  models.py  openenv.yaml  pyproject.toml  reward.py  student.py
examiner_env/server/: Dockerfile  __init__.py  app.py  examiner_environment.py  requirements.txt
hf_space/: README.md  app.py  requirements.txt
hf_space/assets/: after.txt  before.txt
outputs/transcripts/: after.txt  before.txt
scripts/: generate_plots.py  push_to_hub.py  select_transcripts.py  validate_c2_artifacts.py
tests/: conftest.py  test_episode.py  test_reward.py
training/: config.py  eval.py  train_colab.ipynb  train_grpo.py
